--- a/index.html
+++ b/index.html
@@ -55,16 +55,12 @@
         
         <section class="hero">
 
-          <picture>
-            <source media="(max-width: 575px)" src="images/Hero_Mobile.webp" />
-            <source
-              media="(min-width: 576px) and (max-width: 960px)"
-              src="images/Hero_Tablet.webp"
-            />
-            <img src="images/Hero_Desktop.webp" />
-          </picture>
+            <picture>
+                <source width="576" height="576" media="(max-width: 575px)" src="images/Hero_Mobile.webp">
+                <source width="576" height="576" media="(min-width: 576px) and (max-width: 960px)" src="images/Hero_Tablet.webp">
+                <img width="576" height="576" src="images/Hero_Desktop.webp">
+            </picture>
 
-           
             <div class="hero-content">
                 <div class="container">
                     <h1>Discover our line of VR Headsets</h1>
@@ -223,8 +219,7 @@
         </footer>
 
 
-         <a href="#" id="open_preferences_center">Update cookies preferences</a>
- 
+        <a href="#" id="open_preferences_center">Update cookies preferences</a>
 
         <script type="text/javascript" src="/js/main.js"></script>
         <script type="text/javascript" src="/js/products.js"></script>
