⚡️ pref :: 모든 이미지에 alt 속성 추가

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <li><a href="about.html">About us</a></li>
                         <li><a href="index.html#best-sellers-section">Best Sellers</a></li>
                         <li><a href="index.html#newsletter-section">Newsletter</a></li>
-                        <li class="menu-icon"><img src="images/menu_icon.webp" ></li>
+                        <li class="menu-icon"><img src="images/menu_icon.webp" alt="Menu Icon"></li>
                     </ul>
                 </nav>
             </div>
@@ -56,9 +56,9 @@
         <section class="hero">
 
             <picture>
-                <source media="(max-width: 575px)" srcset="images/Hero_Mobile.webp">
-                <source media="(min-width: 576px) and (max-width: 960px)" srcset="images/Hero_Tablet.webp">
-                <img src="images/Hero_Desktop.webp">
+                  <source media="(max-width: 575px)" srcset="images/Hero_Mobile.webp">
+                  <source media="(min-width: 576px) and (max-width: 960px)" srcset="images/Hero_Tablet.webp">
+                <img src="images/Hero_Desktop.webp" alt="Hero Image for Desktop">
             </picture>
 
             <div class="hero-content">
