⚡️ pref :: 백그라운드 및 포그라운드 색상의 대비율 최적화로 성능향상

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium 
                         doloremque laudantium.
                     </p>
-                    <button>View Headsets</button>
+                    <button style="background-color: #33c6dd; color: #FFF;">View Headsets</button>
                 </div>
             </div>
         </section>
@@ -95,7 +95,7 @@
                           width="125" height="125"> 
                         </div>
                         <div class="product-info">
-                            <h5 class="categories">Headsets, Apple</h5>
+                            <h5 class="categories" style="color: #000;">Headsets, Apple</h5>
                             <h4 class="title">Apple Headset</h4>
                             <h3 class="price">
                                 <span>US$ 450.00</span>
@@ -142,8 +142,8 @@
                             <h5 class="categories">Headsets, Oculus</h5>
                             <h4 class="title">Oculus Headset</h4>
                             <h3 class="price">
-                                <span class="discounted-price">US$ 349.99</span>
-                                <span class="original-price">US$ 419.99</span>
+                                <span class="discounted-price" style="color: #000;">US$ 349.99</span>
+                                <span class="original-price" style="color: #888;">US$ 419.99</span>
                             </h3>
                             <button>Add to bag</button>
                         </div>
