⚡️ pref :: 제목 요소가 내림차순으로 표시되지 않아서 접근성이 떨어지는 성능 개선

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                           width="125" height="125"> 
                         </div>
                         <div class="product-info">
-                            <h5 class="categories" style="color: #000;">Headsets, Apple</h5>
+                            <h4 class="categories" style="color: #000;">Headsets, Apple</h4>
                             <h4 class="title">Apple Headset</h4>
                             <h3 class="price">
                                 <span>US$ 450.00</span>
@@ -117,7 +117,7 @@
                           width="125" height="125"> 
                         </div>
                         <div class="product-info">
-                            <h5 class="categories">Headsets, PS</h5>
+                            <h4 class="categories" style="color: #000;">Headsets, PS</h4>
                             <h4 class="title">Playstation Headset</h4>
                             <h3 class="price">
                                 <span>US$ 399.99</span>
@@ -139,7 +139,7 @@
                           width="125" height="125">
                         </div>
                         <div class="product-info">
-                            <h5 class="categories">Headsets, Oculus</h5>
+                            <h4 class="categories">Headsets, Oculus</h4>
                             <h4 class="title">Oculus Headset</h4>
                             <h3 class="price">
                                 <span class="discounted-price" style="color: #000;">US$ 349.99</span>
