--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Tech Shop</title>
+    <meta name="description" content="Discover the latest VR headsets and accessories at Tech Shop. Explore our best sellers and subscribe to our newsletter for exclusive deals. with hanghaeplus fe">
     <link rel="stylesheet" href="/css/styles.css">
     <!-- <link rel="stylesheet" type="text/css" href="/css/slick.css"/> -->
     <!-- Google Tag Manager -->
