⚡️ pref :: 2차 백그라운드 대비 색상 대비 개선 작업

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
                     doloremque laudantium.
                 </p>
-                <button style="background-color: #33c6dd; color: #FFF;">View Headsets</button>
+                <button style="background-color: #007BFF; color: #FFF;">View Headsets</button>
             </div>
         </div>
     </section>
@@ -108,7 +108,7 @@
                             width="125" height="125">
                     </div>
                     <div class="product-info">
-                        <h3 class="categories" style="color: #000;">Headsets, Apple</h3> <!-- h4에서 h3로 변경 -->
+                        <h3 class="categories" style="color: #000;">Headsets, Apple</h3>
                         <h4 class="title">Apple Headset</h4>
                         <h3 class="price">
                             <span>US$ 450.00</span>
@@ -130,7 +130,7 @@
                             width="125" height="125">
                     </div>
                     <div class="product-info">
-                        <h3 class="categories" style="color: #000;">Headsets, PS</h3> <!-- h4에서 h3로 변경 -->
+                        <h3 class="categories" style="color: #000;">Headsets, PS</h3>
                         <h4 class="title">Playstation Headset</h4>
                         <h3 class="price">
                             <span>US$ 399.99</span>
@@ -152,7 +152,7 @@
                             width="125" height="125">
                     </div>
                     <div class="product-info">
-                        <h3 class="categories">Headsets, Oculus</h3> <!-- h4에서 h3로 변경 -->
+                        <h3 class="categories" style="color: #000;">Headsets, Oculus</h3>
                         <h4 class="title">Oculus Headset</h4>
                         <h3 class="price">
                             <span class="discounted-price" style="color: #000;">US$ 349.99</span>
@@ -167,7 +167,7 @@
     </section>
 
     <section class="best-sellers">
-        <h2>All Products</h2> <!-- h1에서 h2로 변경 -->
+        <h2>All Products</h2>
         <hr>
         <div class="product-slider" id="all-products">
             <div class="container">
