--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <li><a href="about.html">About us</a></li>
                         <li><a href="index.html#best-sellers-section">Best Sellers</a></li>
                         <li><a href="index.html#newsletter-section">Newsletter</a></li>
-                        <li class="menu-icon"><img src="images/menu_icon.webp" alt="Menu Icon"></li>
+                        <li class="menu-icon"><img src="images/menu_icon.avif" alt="Menu Icon"></li>
                     </ul>
                 </nav>
             </div>
@@ -66,9 +66,9 @@
         
         <section class="hero">
             <picture>
-                  <source media="(max-width: 575px)" srcset="images/Hero_Mobile.webp">
-                  <source media="(min-width: 576px) and (max-width: 960px)" srcset="images/Hero_Tablet.webp">
-                <img src="images/Hero_Desktop.webp" alt="Hero Image for Desktop">
+                  <source media="(max-width: 575px)" srcset="images/Hero_Mobile.avif">
+                  <source media="(min-width: 576px) and (max-width: 960px)" srcset="images/Hero_Tablet.avif">
+                <img src="images/Hero_Desktop.avif" alt="Hero Image for Desktop">
             </picture>
             <div class="hero-content">
                 <div class="container">
@@ -90,10 +90,10 @@
                 <div class="container">
                     <div class="product new">
                         <div class="product-picture">
-                          <img src="images/vr1.webp"
-                          srcset="images/vr1.webp 160w,
-                                  images/vr1.webp 320w,
-                                  images/vr1.webp 480w"
+                          <img src="images/vr1.avif"
+                          srcset="images/vr1.avif 160w,
+                                  images/vr1.avif 320w,
+                                  images/vr1.avif 480w"
                           sizes="(max-width: 767px) 160px,
                                   (max-width: 1023px) 320px,
                                   480px"
@@ -112,10 +112,10 @@
 
                     <div class="product new">
                         <div class="product-picture">
-                          <img src="images/vr2.webp"
-                          srcset="images/vr2.webp 160w,
-                                  images/vr2.webp 320w,
-                                  images/vr2.webp 480w"
+                          <img src="images/vr2.avif"
+                          srcset="images/vr2.avif 160w,
+                                  images/vr2.avif 320w,
+                                  images/vr2.avif 480w"
                           sizes="(max-width: 767px) 160px,
                                   (max-width: 1023px) 320px,
                                   480px"
@@ -134,10 +134,10 @@
 
                     <div class="product">
                         <div class="product-picture">
-                          <img src="images/vr3.webp"
-                          srcset="images/vr3.webp 160w,
-                                  images/vr3.webp 320w,
-                                  images/vr3.webp 480w"
+                          <img src="images/vr3.avif"
+                          srcset="images/vr3.avif 160w,
+                                  images/vr3.avif 320w,
+                                  images/vr3.avif 480w"
                           sizes="(max-width: 767px) 160px,
                                   (max-width: 1023px) 320px,
                                   480px"
